# gxgboost

./: .gitmodules  CMakeLists.txt  README.md
data/: gxgboost.e  gxgboost.gss  gxgboost.sdf  gxgboost.src
res/: package.json
src/: gxgboost.cc  gxgboost.h
